DRAKEN-3074: Update scheduled billing API attribute
